--- a/sitio/src/views/resultSearch.ejs
+++ b/sitio/src/views/resultSearch.ejs
@@ -16,7 +16,7 @@
 						<% result.forEach(producto=> { %>
 							<article class="product">
 								<a href="/products/detail/<%= producto.id %>">
-									<img class="img-product" src="/images/<%= producto.images[0] %> " alt="">
+									<img class="img-product" src="/images/<%= producto.imagenes[0].name %> " alt="">
 									<div class="product-description">
 										<h3 class="name-product">
 											<%= producto.name %>
@@ -24,8 +24,8 @@
 										<p>$ <%=producto.price%>
 										</p>
 										<p>
-											<%=producto.discount%> <span>cuotas de </span>$ <%=( producto.price
-													/ producto.discount).toFixed(0) %>
+											<%=producto.cuotas%> <span>cuotas de </span>$ <%=( producto.price
+													/ producto.cuotas).toFixed(0) %>
 										</p>
 									</div>
 								</a>
@@ -40,13 +40,13 @@
 						<% result.forEach(producto => { %>
 							<article class="product">
 								<a href="/products/detail/<%= producto.id %>">
-									<img class="img-product" src="/images/<%= producto.images[0] %> " alt="">
+									<img class="img-product" src="/images/<%= producto.imagenes[0].name %> " alt="">
 									<div class="product-description">
 										<h3 class="name-product">
 											<%= producto.name %>
 										</h3>
 										<p>$ <%=producto.price%></p>
-										<p><%=producto.discount%> <span>cuotas de  </span>$ <%=( producto.price / producto.discount).toFixed(0) %></p>
+										<p><%=producto.cuotas%> <span>cuotas de  </span>$ <%=( producto.price / producto.cuotas).toFixed(0) %></p>
 									</div>
 								</a>
 							</article>
