--- a/sitio/src/views/categorias.ejs
+++ b/sitio/src/views/categorias.ejs
@@ -10,15 +10,13 @@
         <%- include('./partials/header.ejs') %>
 
             <main class="main">
-
-                <h2 class=" titulo-Destacados" style ="border-bottom: 1px solid gray; margin: 0px 75px;padding-bottom: 5px;">  Categoría <%= title%> </h2>
+                <h2 class=" titulo-Destacados" style ="border-bottom: 1px solid gray; margin: 0px 75px;padding-bottom: 5px;">  Categoría <%= categoria.name%> </h2>
                 <!-- C a t e g o r i a s   P r o d u c t o s   -->
                 <section class="conteiner-products">
-                     <% if (categoria === categoria) { %>
                       <% resultado.forEach(producto => { %>
                         <article class="product">
                             <a href="/products/detail/<%= producto.id %>">
-                                <img class="img-product" src="/images/<%= producto.images[0] %> " alt="">
+                                <img class="img-product" src="/images/<%= producto.imagenes[0].name %> " alt="">
                                 <div class="product-description">
                                     <h3 class="name-product">
                                         <%= producto.name %>
@@ -26,14 +24,13 @@
                                     <p>$ <%=producto.price%>
                                     </p>
                                     <p>
-                                        <%=producto.discount%> <span>cuotas de </span>$ <%=( producto.price /
-                                                producto.discount).toFixed(0) %>
+                                        <%=producto.cuotas%> <span>cuotas de </span>$ <%=( producto.price /
+                                                producto.cuotas).toFixed(0) %>
                                     </p>
                                 </div>
                             </a>
                         </article>
                         <% }) %>
-                     <% } %> 
                 </section>
                 <section class="conteiner-products">
 
