--- a/sitio/src/views/productAdd.ejs
+++ b/sitio/src/views/productAdd.ejs
@@ -73,8 +73,8 @@
                   <div class="mb-3">
                     <label for="formGroupExampleInput2" class="form-label">Cuotas</label>
                     <input type="number" class="form-control" id="formGroupExampleInput2" name="discount">
-                    <%if (locals.errors && errors.discount){%>
-                      <p style="color: red;"> <%=errors.discount.msg%> </p>
+                    <%if (locals.errors && errors.cuotas){%>
+                      <p style="color: red;"> <%=errors.cuotas.msg%> </p>
                   <%}%>
                   </div>
                   
