--- a/sitio/src/views/productEdit.ejs
+++ b/sitio/src/views/productEdit.ejs
@@ -17,7 +17,7 @@
                 value="<%= producto.name %>">
             </div>
             <div class="text-center">
-              <img src="<%= producto.image %>" alt="">
+              <img src="<%= producto.imagenes[0].name %>" alt="">
             </div>
             <div class="mb-3">
               <label for="floatingTextarea">Descripción</label>
