--- a/sitio/public/stylesheets/header.css
+++ b/sitio/public/stylesheets/header.css
@@ -11,6 +11,7 @@ header .div-cont{
     width: 100%;
     position: fixed;
     z-index: 10000;
+    box-shadow: 10px 0px 8px 3px #d3d3d3;
 }
 
 nav {
